--- a/make/fragments/tasks/outdated_py.toml
+++ b/make/fragments/tasks/outdated_py.toml
@@ -6,21 +6,20 @@
 category = "04 - Check"
 description = "Task 'outdated' for Python projects"
 script_runner = "@duckscript"
+env.PIP_EXTRA_INDEX_URL = { unset = true }
+env.PIP_FIND_LINKS      = { unset = true }
+env.PIP_INDEX_URL       = { unset = true }
+env.PIP_NO_INDEX        = { unset = true }
+env.PIP_PYPI_URL        = { unset = true }
+env.UV_DEFAULT_INDEX    = { unset = true }
+env.UV_EXTRA_INDEX_URL  = { unset = true }
+env.UV_FIND_LINKS       = { unset = true }
+env.UV_INDEX            = { unset = true }
+env.UV_INDEX_STRATEGY   = { unset = true }
+env.UV_INDEX_URL        = { unset = true }
 script = [
     '''
     !include_files ./make/libraries/log.ds
-
-    unset PIP_EXTRA_INDEX_URL
-    unset PIP_FIND_LINKS
-    unset PIP_INDEX_URL
-    unset PIP_NO_INDEX
-    unset PIP_PYPI_URL
-    unset UV_DEFAULT_INDEX
-    unset UV_EXTRA_INDEX_URL
-    unset UV_FIND_LINKS
-    unset UV_INDEX
-    unset UV_INDEX_STRATEGY
-    unset UV_INDEX_URL
 
     info "🚀 python -c \"import subprocess; subprocess.run(['pip-upgrade', '--dry-run', 'requirements-dev.txt'], input='x\\n', text=True)\""
     exec --fail-on-error python -c "import subprocess; subprocess.run(['pip-upgrade', '--dry-run', 'requirements-dev.txt'], input='x\\n', text=True)"
