--- a/connectors/python/tabsdata_snowflake/pytest.ini
+++ b/connectors/python/tabsdata_snowflake/pytest.ini
@@ -27,7 +27,8 @@ markers =
     tableframe: mark a test that validates the TableFrame API.
     tabsdata: requires tabsdata server to be started
 
-addopts = --tb=short
+console_output_style = progress
+addopts = --tb=auto
 
 # Use this one for better troubleshooting in integration or release builds.
-# addopts = --tb=short --capture=tee-sys -s --log-cli-level=DEBUG
+# addopts = --tb=auto --capture=tee-sys -s --log-cli-level=DEBUG
