--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -53,6 +53,7 @@ deny = [{ crate = "log", reason = "We use 'tracing' crate instead, which has equ
 
 allow = [
     "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
     "BSD-2-Clause",
     "BSD-3-Clause",
     "BSL-1.0",
