--- a/make/fragments/tasks/build_rs.toml
+++ b/make/fragments/tasks/build_rs.toml
@@ -270,17 +270,67 @@ script = [
         info "🚀 cd ${PROJECT_TABSDATA_ROOT_FOLDER}"
         cd ${PROJECT_TABSDATA_ROOT_FOLDER}
 
-        info "🚀 docker build -f expansions/docker/linux_x86_64/Dockerfile -t tabsdata/x86_64-unknown-linux-musl:main ."
-        exec --fail-on-error docker build -f expansions/docker/linux_x86_64/Dockerfile -t tabsdata/x86_64-unknown-linux-musl:main .
+        td_profile = set ${td-profile}
 
-        info "🚀 docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata tabsdata/x86_64-unknown-linux-musl:main maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module"
-        exec --fail-on-error docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata tabsdata/x86_64-unknown-linux-musl:main maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module
+        info "🚀 docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata --env TD_PROFILE=${td_profile} quay.io/pypa/manylinux2014_x86_64 bash -lc ..."
+        td_script = set "yum -y install perl perl-IPC-Cmd"
+        td_script = set "${td_script} && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.89.0"
+        td_script = set "${td_script} && . $HOME/.cargo/env"
+        td_script = set "${td_script} && python3.12 -m pip install --upgrade pip"
+        td_script = set "${td_script} && python3.12 -m pip install maturin[patchelf]==1.9.3 --root-user-action=ignore"
+        td_script = set "${td_script} && export OPENSSL_STATIC=1"
+        td_script = set "${td_script} && export PKG_CONFIG_ALL_STATIC=1"
+        td_script = set "${td_script} && export ZLIB_STATIC=1"
+        td_script = set "${td_script} && export RUSTFLAGS='-C link-arg=-static-libgcc -C link-arg=-static-libstdc++'"
+        td_script = set "${td_script} && python3.12 --version"
+        td_script = set "${td_script} && python3.12 -m pip --version"
+        td_script = set "${td_script} && rustc --version"
+        td_script = set "${td_script} && cargo --version"
+        td_script = set "${td_script} && python3.12 -m maturin --version"
+        td_script = set "${td_script} && patchelf --version"
+        td_script = set "${td_script} && python3.12 -m maturin build --locked --compatibility manylinux2014 --profile ${td-profile} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module"
+        exec --fail-on-error docker run --platform linux/amd64 --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata --env TD_PROFILE=${td_profile} quay.io/pypa/manylinux2014_x86_64 bash -lc "${td_script}"
 
         info "🚀 sudo chown -R ${USER}:${USER} ${PROJECT_TABSDATA_ROOT_FOLDER}/expansions/polars/target"
         exec --fail-on-error sudo chown -R ${USER}:${USER} ${PROJECT_TABSDATA_ROOT_FOLDER}/expansions/polars/target
 
         info "🚀 cd ${PROJECT_RS_TY_EXPANSIONS_FOLDER}/modules/ty-tableframe"
         cd "${PROJECT_RS_TY_EXPANSIONS_FOLDER}/modules/ty-tableframe"
+
+        # td_script = set "apk add --no-cache perl"
+        # td_script = set "${td_script} && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain 1.89.0"
+        # td_script = set "${td_script} && . $HOME/.cargo/env"
+        # td_script = set "${td_script} && rustup target add x86_64-unknown-linux-musl"
+        # td_script = set "${td_script} && python3.12 -m pip install --upgrade pip"
+        # td_script = set "${td_script} && python3.12 -m pip install maturin[patchelf]==1.9.3 --root-user-action=ignore"
+        # td_script = set "${td_script} && python3.12 -m pip --version"
+        # td_script = set "${td_script} && export OPENSSL_STATIC=1"
+        # td_script = set "${td_script} && export PKG_CONFIG_ALL_STATIC=1"
+        # td_script = set "${td_script} && export ZLIB_STATIC=1"
+        # td_script = set "${td_script} && export RUSTFLAGS='-C link-arg=-static-libgcc -C link-arg=-static-libstdc++'"
+        # td_script = set "${td_script} && python3.12 --version"
+        # td_script = set "${td_script} && python3.12 -m pip --version"
+        # td_script = set "${td_script} && rustc --version"
+        # td_script = set "${td_script} && cargo --version"
+        # td_script = set "${td_script} && python3.12 -m maturin --version"
+        # td_script = set "${td_script} && patchelf --version"
+        # td_script = set "${td_script} && python3.12 -m maturin build --locked --compatibility musllinux_1_1 --target x86_64-unknown-linux-musl --profile ${TD_PROFILE} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module"
+        # exec --fail-on-error docker run --platform linux/amd64 --rm -v --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata --env TD_PROFILE=${td_profile} quay.io/pypa/musllinux_1_1_x86_64 bash -lc "${td_script}"
+
+        ## info "🚀 cd ${PROJECT_TABSDATA_ROOT_FOLDER}"
+        ## cd ${PROJECT_TABSDATA_ROOT_FOLDER}
+
+        ## info "🚀 docker build -f expansions/docker/linux_x86_64/Dockerfile -t tabsdata/x86_64-unknown-linux-musl:main ."
+        ## exec --fail-on-error docker build -f expansions/docker/linux_x86_64/Dockerfile -t tabsdata/x86_64-unknown-linux-musl:main .
+
+        ## info "🚀 docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata tabsdata/x86_64-unknown-linux-musl:main maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module"
+        ## exec --fail-on-error docker run --rm --mount=type=bind,src=${PROJECT_TABSDATA_ROOT_FOLDER},target=/tabsdata -w /tabsdata tabsdata/x86_64-unknown-linux-musl:main maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --manifest-path /tabsdata/expansions/polars/modules/ty-tableframe/Cargo.toml --features extension-module
+
+        ## info "🚀 sudo chown -R ${USER}:${USER} ${PROJECT_TABSDATA_ROOT_FOLDER}/expansions/polars/target"
+        ## exec --fail-on-error sudo chown -R ${USER}:${USER} ${PROJECT_TABSDATA_ROOT_FOLDER}/expansions/polars/target
+
+        ## info "🚀 cd ${PROJECT_RS_TY_EXPANSIONS_FOLDER}/modules/ty-tableframe"
+        ## cd "${PROJECT_RS_TY_EXPANSIONS_FOLDER}/modules/ty-tableframe"
     else
         info "🚀 maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --features extension-module"
         exec --fail-on-error maturin build --locked %{td-target-token} %{td-target} --profile ${td-profile} --features extension-module
