--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -59,6 +59,7 @@ tm-workspace = { workspace = true }
 td-common = { workspace = true }
 td-error = { workspace = true }
 td-process = { workspace = true }
+td-test = { workspace = true }
 
 ## Extensions
 
