[TD-759] Improve reporting of pytest execution sessions (#659)

--- a/devutils/automation/tasks/python/td_setup/.coveragerc
+++ b/devutils/automation/tasks/python/td_setup/.coveragerc
@@ -3,11 +3,15 @@
 #
 
 [run]
-omit = 
+source = td_setup
+omit =
     test*
     test*/**
+branch = True
 parallel = True
 disable_warnings = no-data-collected
 
 [report]
+skip_empty = True
 show_missing = True
+relative_files = True
