--- a/client/td-sdk/.coveragerc
+++ b/client/td-sdk/.coveragerc
@@ -3,10 +3,15 @@
 #
 
 [run]
-source =
-    tabsdata
+source = tabsdata
+omit =
+    test*
+    test*/**
+branch = True
 parallel = True
 disable_warnings = no-data-collected
 
 [report]
+skip_empty = True
 show_missing = True
+relative_files = True
