--- a/connectors/python/tabsdata_databricks/.coveragerc
+++ b/connectors/python/tabsdata_databricks/.coveragerc
@@ -3,11 +3,15 @@
 #
 
 [run]
-omit = 
+source = tabsdata_databricks
+omit =
     test*
     test*/**
+branch = True
 parallel = True
 disable_warnings = no-data-collected
 
 [report]
+skip_empty = True
 show_missing = True
+relative_files = True
