--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -8,6 +8,7 @@
 
 # Global
 
+ansi2html==1.9.2    
 black==25.1.0
 boto3==1.40.11
 build
@@ -41,6 +42,7 @@ pygame
 pytest==8.4.1
 pytest-check==2.5.3
 pytest-cov==6.2.1
+pytest-reporter-html1==0.9.3
 pytest-timeout==2.4.0
 pytest-xdist==3.8.0
 python-dateutil==2.9.0.post0
