--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -6,6 +6,9 @@
 requires = ["psutil>=7.0", "setuptools==78.0.2", "maturin>=1.0,<2.0", "polars>=1.32.3"]
 build-backend = "maturin"
 
+[tool.flake8]
+exclude = ["*.pyi"]
+
 [project]
 name = "ty-tableframe"
 requires-python = ">=3.12"
@@ -18,12 +21,13 @@ dynamic = ["version"]
 
 [tool.maturin]
 python-source = "python"
-module-name = "tabsdata.expansions.tableframe._td"
+module-name = "tabsdata.expansions.tableframe._expressions"
 compatibility = "musllinux_1_1"
 
 [tool.black]
 line-length = 88
 preview = true
+extend-exclude = '\.pyi$'
 enable-unstable-feature = ["string_processing"]
 
 [tool.coverage.html]
@@ -38,6 +42,7 @@ exclude_also = [
 
 [tool.isort]
 profile = "black"
+skip_glob = ["*.pyi"]
 known_first_party = [
     "tabsdata",
     "tabsdata_databricks",
